trunk/Archive2/22/4576bd79667a58/output
a.cpp: In function 'int main()':
a.cpp:19:8: error: expected primary-expression before ';' token
     };-;
        ^
